Feat: 에러코드 추가 (#32)