@@ -1,7 +1,9 @@
 package com.speakfit.backend.domain.term.service;
 
 import com.speakfit.backend.domain.term.dto.res.TermsGetRes;
+import com.speakfit.backend.domain.term.exception.TermErrorCode;
 import com.speakfit.backend.domain.term.repository.TermRepository;
+import com.speakfit.backend.global.apiPayload.exception.CustomException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,13 +20,19 @@ public class TermQueryServiceImpl implements TermQueryService {
     // 약관 목록 조회 api
     @Override
     public TermsGetRes getTerms(){
-        var items = termRepository.findAllByOrderByIdAsc().stream()
+        var terms = termRepository.findAllByOrderByIdAsc();
+
+        if (terms.isEmpty()){
+            throw new CustomException(TermErrorCode.TERMS_EMPTY);
+        }
+
+        var items = terms.stream()
                 .map(term -> TermsGetRes.TermItem.builder()
                         .termId(term.getId())
                         .title(term.getTitle())
                         .required(term.isRequired())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return TermsGetRes.builder()
                 .terms(items)
